some webpack cleaning and bug fixes

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 
 <head>
         <title> Wisteria GistNoesis</title>
+        <script src="vconsole.min.js"></script>
+<script>
+    window.vConsole = new window.VConsole();
+</script>
 </head>
 
 <body style="background-color:#C9A0DC;">
-        <script src="index.js"></script>
         <div style="width:100%; overflow: hidden;">
                 <div id="vuecontainer" style="width: 20%; float: left;">
                         <div>
@@ -141,8 +144,6 @@
                 <span>You can contact us at gistnoesis@gmail.com </span></br></br>
                 <span>Thanks :)</span></br>
         </div>
-
-
 
 <script type="text/javascript" src="main.js"></script></body>
 
